; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs3xdr.c_nfs3_xdr_readargs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs3xdr.c_nfs3_xdr_readargs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_rqst = type { %struct.TYPE_4__, i32, i32, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { %struct.rpc_auth* }
%struct.rpc_auth = type { i32 }
%struct.nfs_readargs = type { i32, i32, i32, i32, i32 }

@RPC_REPHDRSIZE = common dso_local global i32 0, align 4
@NFS3_readres_sz = common dso_local global i32 0, align 4
@XDRBUF_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rpc_rqst*, i32*, %struct.nfs_readargs*)* @nfs3_xdr_readargs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfs3_xdr_readargs(%struct.rpc_rqst* %0, i32* %1, %struct.nfs_readargs* %2) #0 {
  %4 = alloca %struct.rpc_rqst*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.nfs_readargs*, align 8
  %7 = alloca %struct.rpc_auth*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.rpc_rqst* %0, %struct.rpc_rqst** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.nfs_readargs* %2, %struct.nfs_readargs** %6, align 8
  %10 = load %struct.rpc_rqst*, %struct.rpc_rqst** %4, align 8
  %11 = getelementptr inbounds %struct.rpc_rqst, %struct.rpc_rqst* %10, i32 0, i32 3
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load %struct.rpc_auth*, %struct.rpc_auth** %13, align 8
  store %struct.rpc_auth* %14, %struct.rpc_auth** %7, align 8
  %15 = load %struct.nfs_readargs*, %struct.nfs_readargs** %6, align 8
  %16 = getelementptr inbounds %struct.nfs_readargs, %struct.nfs_readargs* %15, i32 0, i32 4
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %9, align 4
  %18 = load i32*, i32** %5, align 8
  %19 = load %struct.nfs_readargs*, %struct.nfs_readargs** %6, align 8
  %20 = getelementptr inbounds %struct.nfs_readargs, %struct.nfs_readargs* %19, i32 0, i32 3
  %21 = load i32, i32* %20, align 4
  %22 = call i32* @xdr_encode_fhandle(i32* %18, i32 %21)
  store i32* %22, i32** %5, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load %struct.nfs_readargs*, %struct.nfs_readargs** %6, align 8
  %25 = getelementptr inbounds %struct.nfs_readargs, %struct.nfs_readargs* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 4
  %27 = call i32* @xdr_encode_hyper(i32* %23, i32 %26)
  store i32* %27, i32** %5, align 8
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @htonl(i32 %28)
  %30 = load i32*, i32** %5, align 8
  %31 = getelementptr inbounds i32, i32* %30, i32 1
  store i32* %31, i32** %5, align 8
  store i32 %29, i32* %30, align 4
  %32 = load %struct.rpc_rqst*, %struct.rpc_rqst** %4, align 8
  %33 = getelementptr inbounds %struct.rpc_rqst, %struct.rpc_rqst* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @xdr_adjust_iovec(i32 %34, i32* %35)
  %37 = load %struct.rpc_rqst*, %struct.rpc_rqst** %4, align 8
  %38 = getelementptr inbounds %struct.rpc_rqst, %struct.rpc_rqst* %37, i32 0, i32 2
  store i32 %36, i32* %38, align 8
  %39 = load i32, i32* @RPC_REPHDRSIZE, align 4
  %40 = load %struct.rpc_auth*, %struct.rpc_auth** %7, align 8
  %41 = getelementptr inbounds %struct.rpc_auth, %struct.rpc_auth* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = add nsw i32 %39, %42
  %44 = load i32, i32* @NFS3_readres_sz, align 4
  %45 = add nsw i32 %43, %44
  %46 = shl i32 %45, 2
  store i32 %46, i32* %8, align 4
  %47 = load %struct.rpc_rqst*, %struct.rpc_rqst** %4, align 8
  %48 = getelementptr inbounds %struct.rpc_rqst, %struct.rpc_rqst* %47, i32 0, i32 0
  %49 = load i32, i32* %8, align 4
  %50 = load %struct.nfs_readargs*, %struct.nfs_readargs** %6, align 8
  %51 = getelementptr inbounds %struct.nfs_readargs, %struct.nfs_readargs* %50, i32 0, i32 1
  %52 = load i32, i32* %51, align 4
  %53 = load %struct.nfs_readargs*, %struct.nfs_readargs** %6, align 8
  %54 = getelementptr inbounds %struct.nfs_readargs, %struct.nfs_readargs* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 4
  %56 = load i32, i32* %9, align 4
  %57 = call i32 @xdr_inline_pages(%struct.TYPE_4__* %48, i32 %49, i32 %52, i32 %55, i32 %56)
  %58 = load i32, i32* @XDRBUF_READ, align 4
  %59 = load %struct.rpc_rqst*, %struct.rpc_rqst** %4, align 8
  %60 = getelementptr inbounds %struct.rpc_rqst, %struct.rpc_rqst* %59, i32 0, i32 0
  %61 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 8
  %63 = or i32 %62, %58
  store i32 %63, i32* %61, align 8
  ret i32 0
}

declare dso_local i32* @xdr_encode_fhandle(i32*, i32) #1

declare dso_local i32* @xdr_encode_hyper(i32*, i32) #1

declare dso_local i32 @htonl(i32) #1

declare dso_local i32 @xdr_adjust_iovec(i32, i32*) #1

declare dso_local i32 @xdr_inline_pages(%struct.TYPE_4__*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
